checked first div

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <input type="checkbox" name="" id="responsive_menu" />
       <label for="responsive_menu"></label>
 
-      <input type="radio" name="slider" id="hom" />
+      <input type="radio" name="slider" id="hom" checked />
       <input type="radio" name="slider" id="feture" />
       <input type="radio" name="slider" id="aboot" />
       <input type="radio" name="slider" id="reviev" />
